Centred heading and fixed link alignment issue
Put 'Purchase a Puppy' in the centre on the Puppy News page.
Fixed an issue where 'puppy types' link in the nav bar was higher than the other content. All content now in line.

--- a/Website.css
+++ b/Website.css
@@ -22,6 +22,11 @@ h1 {
     margin-bottom: 20px;
 }
 
+h2 {
+    text-align: center;
+    align-content: center;
+}
+
 img {
     width: 100%;
 }
@@ -58,6 +63,8 @@ figure {
     font-size: 14pt;
     text-align: center;
     font-weight: bold;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 
 #link-pics:hover, #link-news:hover, #link-types:hover, #link-home:hover {
